--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f0819d">  <td>23/01/18 13:46:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TrialBalanceCreditorsTest.teardown()[pri:0, instance:com.lpg.qa.accountsTestcases.TrialBalanceCreditorsTest@1ed6388a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="f0819d">  <td>23/01/18 13:46:38</td>   <td>-14572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrialBalanceCreditorsTest.TrialBalanceCreditorsPageTest()[pri:0, instance:com.lpg.qa.accountsTestcases.TrialBalanceCreditorsTest@1ed6388a]">TrialBalanceCreditorsPageTest</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="f0819d">  <td>23/01/18 13:46:28</td>   <td>-24352</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TrialBalanceCreditorsTest.setup()[pri:0, instance:com.lpg.qa.accountsTestcases.TrialBalanceCreditorsTest@1ed6388a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="b6d4d4">  <td>23/01/18 13:46:52</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LpgTestBase.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.lpg.qa.accountsTestcases.TrialBalanceCreditorsTest@1ed6388a]">&lt;&lt;screenshotCapture</td> 
-<td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>23/02/02 17:23:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyStatementReportTest.setup()[pri:0, instance:com.lpg.qa.gtTestCases.DailyStatementReportTest@576d5deb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2083999882</td>   <td></td> </tr>
+<tr bgcolor="929eff">  <td>23/02/02 17:23:44</td>   <td>25066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LpgTestBase.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.lpg.qa.gtTestCases.DailyStatementReportTest@576d5deb]">&lt;&lt;screenshotCapture</td> 
+<td>&nbsp;</td>  <td>main@2083999882</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>23/02/02 17:23:44</td>   <td>25110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyStatementReportTest.teardown()[pri:0, instance:com.lpg.qa.gtTestCases.DailyStatementReportTest@576d5deb]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>23/02/02 17:23:33</td>   <td>14272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyStatementReportTest.DailyStatementReportPagetest()[pri:0, instance:com.lpg.qa.gtTestCases.DailyStatementReportTest@576d5deb]">DailyStatementReportPagetest</td> 
+  <td>main@2083999882</td>   <td></td> </tr>
 </table>
